<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#88846E">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/lunch"
        android:textColor="#FFEA58"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_lunch"
        android:layout_width="350dp"
        android:layout_height="520dp"
        android:background="#FFFF"
        android:scrollbars="vertical"
        android:text="Любые овощи - 200г, заправить лимонным соком по вкусу и добавить 1 ложку растительного масла\nГарнир: бурый рис, гречка, перловка, киноа, булгур или любые бобовые: фасоль, чечевица, маш, горох, нут - 50г в сухом виде или в готовом виде объем вашей ладошки\nНа выбор - 150г:\n- рыба\n- куриная грудка\n- филе индейки\nВареные/гриль/на пару\n\nПолдник\nОвощи или фрукты - 200г"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/to_breakfast"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#19264E"
        android:text="@string/to_breakfast"
        android:textColor="#FFF08B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/to_dinner"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#19264E"
        android:text="@string/to_dinner"
        android:textColor="#FFF08B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>