<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88846E">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/breakfast"
        android:textColor="#FFEA58"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_breakfast"
        android:layout_width="350dp"
        android:layout_height="520dp"
        android:background="#FFFF"
        android:scrollbars="vertical"
        android:text="Натощак - выпиваем один стакан теплой воды (можно добавлять лимон)\nВодный режим = 2 литра теплой воды в день, не считая других жидкостей\n\nЗавтрак\nВыбираем любую крупу: овсянка долгой варки от 10 минут, гречка, пшеница, киноа, булгур, перловка или любые бобовые: фасоль, чечевица, маш, горох, нут - 50г в сухом виде или в готовом виде объем вашей ладошки.\n\nВторой завтрак (через 2 часа)\nФрукты или ягоды - 200г"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/to_main"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#19264E"
        android:text="@string/to_main"
        android:textColor="#FFF08B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/to_lunch"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#19264E"
        android:text="@string/to_lunch"
        android:textColor="#FFF08B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>