<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88846E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/Title"
        android:textColor="#FFEA58"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/rightNow"
        android:textAlignment="center"
        android:textColor="#FFEA58"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <Button
        android:id="@+id/to_store"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#19264E"
        android:text="@string/to_store"
        android:textColor="#FFF08B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/to_breakfast"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#19264E"
        android:text="@string/to_start"
        android:textColor="#FFF08B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#A12C2C"
        android:text="Закрыть"
        android:textColor="#FFF08B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/fruts3" />

    <ImageView

        android:id="@+id/imageView5"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/fruts6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/to_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fruts7" />


</androidx.constraintlayout.widget.ConstraintLayout>